--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <li class="item">
                 <span class="advantages-span">
                     <svg class="advantages-icon">
-                        <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                        <use href="./images/icons.svg#icon-antenna"></use>
                     </svg>
                 </span>
                 <h3 class="advantages-title">Strategy</h3>
@@ -68,7 +68,7 @@
             <li class="item">
                 <span class="advantages-span">
                     <svg class="advantages-icon">
-                        <use href="./images/symbol-defs.svg#icon-clock"></use>
+                        <use href="./images/icons.svg#icon-clock"></use>
                     </svg>
                 </span>
                 <h3 class="advantages-title">Punctuality</h3>
@@ -78,7 +78,7 @@
             <li class="item">
                 <span class="advantages-span">
                     <svg class="advantages-icon">
-                        <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                        <use href="./images/icons.svg#icon-diagram"></use>
                     </svg>
                 </span>
                 <h3 class="advantages-title">Diligence</h3>
@@ -88,7 +88,7 @@
             <li class="item">
                 <span class="advantages-span">
                     <svg class="advantages-icon">
-                        <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                        <use href="./images/icons.svg#icon-astronaut"></use>
                     </svg>
                 </span>
                 <h3 class="advantages-title">Technologies</h3>
@@ -128,22 +128,22 @@
                         <ul class="list list-icon">
                             <li class="item"><a class="team-social" href="">
                                     <svg class="link-icon">
-                                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                        <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a></li>
                             <li class="item"><a class="team-social" href="">
                                     <svg class="link-icon">
-                                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                        <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a></li>
                             <li class="item"><a class="team-social" href="">
                                     <svg class="link-icon">
-                                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                        <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a></li>
                             <li class="item"><a class="team-social" href="">
                                     <svg class="link-icon">
-                                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a></li>
                         </ul>
@@ -158,22 +158,22 @@
                         <ul class="list list-icon">
                             <li class="item"><a href="">
                                     <svg class="link-icon">
-                                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                        <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a></li>
                             <li class="item"><a href="">
                                     <svg class="link-icon">
-                                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                        <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a></li>
                             <li class="item"><a href="">
                                     <svg class="link-icon">
-                                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                        <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a></li>
                             <li class="item"><a href="">
                                     <svg class="link-icon">
-                                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a></li>
                         </ul>
@@ -188,22 +188,22 @@
                         <ul class="list list-icon">
                             <li class="item"><a href="">
                                     <svg class="link-icon">
-                                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                        <use href="./images/icons.svg#icon-instagram"></use>
                                     </svg>
                                 </a></li>
                             <li class="item"><a href="">
                                     <svg class="link-icon">
-                                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                        <use href="./images/icons.svg#icon-twitter"></use>
                                     </svg>
                                 </a></li>
                             <li class="item"><a href="">
                                     <svg class="link-icon">
-                                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                        <use href="./images/icons.svg#icon-facebook"></use>
                                     </svg>
                                 </a></li>
                             <li class="item"><a href="">
                                     <svg class="link-icon">
-                                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                        <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a></li>
                         </ul>
@@ -219,24 +219,24 @@
                         <li class="item">
                             <a href="">
                             <svg class="link-icon">
-                                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                <use href="./images/icons.svg#icon-instagram"></use>
                             </svg>
                             </a>
                         </li>
                         <li class="item"><a href="">
                             <svg class="link-icon">
-                                <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                <use href="./images/icons.svg#icon-twitter"></use>
                             </svg>
                         </a></li>
                         <li class="item"><a href="">
                             <svg class="link-icon">
-                                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                <use href="./images/icons.svg#icon-facebook"></use>
                             </svg>
                         </a></li>
                         <li class="item">
                             <a href="">
                             <svg class="link-icon">
-                                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                <use href="./images/icons.svg#icon-linkedin"></use>
                             </svg>
                             </a>
                         </li>
@@ -254,42 +254,42 @@
                 <li  class="item">        
                     <a href="" class="link link-customers">
                     <svg class="icon">
-                        <use href="./images/symbol-defs.svg#icon-Logo"></use>
+                        <use href="./images/icons.svg#icon-Logo"></use>
                     </svg>
                     </a>
                 </li>
                 <li  class="item">        
                     <a href="" class="link link-customers">
                     <svg class="icon">
-                        <use href="./images/symbol-defs.svg#icon-Logo-1"></use>
+                        <use href="./images/icons.svg#icon-Logo-1"></use>
                     </svg>
                     </a>
                 </li>
                 <li class="item">        
                     <a href="" class="link link-customers">
                     <svg class="icon">
-                        <use href="./images/symbol-defs.svg#icon-Logo-2"></use>
+                        <use href="./images/icons.svg#icon-Logo-2"></use>
                     </svg>
                     </a>
                 </li>
                 <li  class="item">        
                     <a href="" class="link link-customers">
                     <svg class="icon">
-                        <use href="./images/symbol-defs.svg#icon-Logo-3"></use>
+                        <use href="./images/icons.svg#icon-Logo-3"></use>
                     </svg>
                     </a>
                 </li>
                 <li  class="item">        
                     <a href="" class="link link-customers">
                     <svg class="icon">
-                        <use href="./images/symbol-defs.svg#icon-Logo-4"></use>
+                        <use href="./images/icons.svg#icon-Logo-4"></use>
                     </svg>
                     </a>
                 </li>
                 <li  class="item">        
                     <a href="" class="link link-customers">
                     <svg class="icon" >
-                        <use href="./images/symbol-defs.svg#icon-Logo-5"></use>
+                        <use href="./images/icons.svg#icon-Logo-5"></use>
                     </svg>
                     </a>
                 </li>
@@ -310,23 +310,23 @@
         <ul class="list footer-icon">
             <li class="item"><a class="social-link" href="">
                     <svg class="social-icon">
-                        <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                 </a></li>
             <li class="item"><a class="social-link" href="">
                     <svg class="social-icon">
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                 </a></li>
             <li class="item"><a class="social-link" href="">
                     <svg class="social-icon">
-                        <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                 </a></li>
             <li class="item">
                 <a class="social-link" href="">
                     <svg class="social-icon">
-                        <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                 </a>
             </li>
