--- a/portfolio.html
+++ b/portfolio.html
@@ -191,23 +191,23 @@
             <ul class="list footer-icon">
                 <li class="item"><a class="social-link" href="">
                         <svg class="social-icon">
-                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                            <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a></li>
                 <li class="item"><a class="social-link" href="">
                         <svg class="social-icon">
-                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                            <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a></li>
                 <li class="item"><a class="social-link" href="">
                         <svg class="social-icon">
-                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                            <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a></li>
                 <li class="item">
                     <a class="social-link" href="">
                         <svg class="social-icon">
-                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                            <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                     </a>
                 </li>
