--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
     <div class="container nav-header">
         <nav class="nav">
             <a class="logo" href="./index.html">WEB<span class="logo-span">STUDIO</span></a>
